--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=TaskManager
+spring.datasource.url = jdbc:postgresql://localhost:5432/TaskManager
+spring.datasource.username = postgres
+spring.datasource.password = 1
