fixed services + added adminUserInit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,33 @@
+# Application
 spring.application.name=TaskManager
-spring.datasource.url = jdbc:postgresql://localhost:5432/TaskManager
-spring.datasource.username = postgres
-spring.datasource.password = 1
+
+# Database Connection (PostgreSQL)
+spring.datasource.url=jdbc:postgresql://localhost:5432/TaskManager
+spring.datasource.username=postgres
+spring.datasource.password=1
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Connection Pool (HikariCP) - Important for performance
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
+# JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.enabled=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Logging (Very useful for debugging)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
+
+
+server.port=8082
+
