--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
 			<version>2.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+
 
 
 	</dependencies>
