--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+
+
 
 
 	</dependencies>
