--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.zaxxer.hikari=DEBUG
 logging.level.org.springframework.jdbc=DEBUG
 
+spring.mvc.hiddenmethod.filter.enabled=true
 
 server.port=8080
 
