--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,15 @@ logging.level.org.springframework.jdbc=DEBUG
 spring.mvc.hiddenmethod.filter.enabled=true
 
 server.port=8080
+#server.error.whitelabel.enabled=false
+
+# Absolute path for Linux services
+#logging.file.name=/var/log/myapp/application.log
+
+# Daily rolling logs with compression
+#logging.logback.rollingpolicy.file-name-pattern=/var/log/myapp/application-%d{yyyy-MM-dd}.log
+#logging.logback.rollingpolicy.max-history=30
+#logging.logback.rollingpolicy.total-size-cap=1GB
+#logging.logback.rollingpolicy.clean-history-on-start=true
+
 
