added auto table/function/types initialization for db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=TaskManager
 
 # Database Connection (PostgreSQL)
-spring.datasource.url=jdbc:postgresql://localhost:5432/TaskManager
+spring.datasource.url=jdbc:postgresql://localhost:5432/TaskManagerTest
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -21,6 +21,15 @@ spring.flyway.enabled=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+# Disable default initialization
+#spring.sql.init.mode=never
+
+# Allow partial execution
+spring.datasource.continue-on-error=true
+
+
 
 # Logging (Very useful for debugging)
 logging.level.org.hibernate.SQL=DEBUG
